# petscagent-bench

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: green_agent_config.yaml  purple_agent_v2_config.yaml
data/: FuelRod2D.json  FuelRod2D_Hard.json
data/archive/: FuelRod2D.json  Poisson1D.json
scripts/: agg_ab.py  agg_feature_sweep.py  agg_rag_ab.py  blind_cross_eval.py  capture_snapshots.sh  diff_rag_ab.py  exercise_purple.py  plot_v1_vs_v2.py  run_3x3_fullsuite.sh  run_3x3_ns2d_retry.sh  run_all_on_gpt54_repeat.sh  run_all_on_repeat.sh  run_diag_ab.sh  run_feature_sweep.sh  run_header_ab.sh  run_header_ab_darcy.sh  run_header_ab_darcy_repeat.sh  run_header_ab_repeat.sh  run_multiplan_ab.sh  run_multiplan_ab_repeat.sh  run_plan_ab.sh  run_plan_ab_repeat.sh  run_rag_ab.sh  run_rag_ab_repeat.sh  run_ragon_more.sh  run_ragon_n3.sh  run_ragon_specific.sh  run_selfverify_ab.sh  run_selfverify_ab_repeat.sh  run_shipped_n3.sh  run_shipped_n30.sh  run_v1_repeat.sh
scripts/archive/: run_3x3.sh  run_3x3_convergence.sh  run_3x3_fuelrod.sh
snapshots/claudeopus47/: Advection_PDE.c  DarcyFlow2D_Steady.c  NS2D_FV_Implicit.c  Robertson_ODE.c  Rosenbrock_banana_function.c  benchmark_summary.json  scatter_vecmpi.c
snapshots/gemini25pro/: Advection_PDE.c  DarcyFlow2D_Steady.c  NS2D_FV_Implicit.c  Robertson_ODE.c  Rosenbrock_banana_function.c  benchmark_summary.json  scatter_vecmpi.c
snapshots/gpt52/: Advection_PDE.c  DarcyFlow2D_Steady.c  NS2D_FV_Implicit.c  Robertson_ODE.c  Rosenbrock_banana_function.c  benchmark_summary.json  (+1 more)
src/: launcher.py
(+9 files in other folders)
